--- a/README.adoc
+++ b/README.adoc
@@ -1,27 +1,8 @@
-= The Reactive SQL Client
+= The Reactive SQL Client, FOLIO fork
 
-image:https://travis-ci.org/eclipse-vertx/vertx-sql-client.svg?branch=master["Build Status",link="https://travis-ci.org/eclipse-vertx/vertx-sql-client"]
+This is the FOLIO fork of https://github.com/eclipse-vertx/vertx-sql-client
+and has these patches been applied to the master and 3.9 branch:
 
-* Simple API focusing on scalability and low overhead.
-* Reactive and non blocking which able to handle many database connections with a single thread.
-* Ranked *#1* in the https://www.techempower.com/benchmarks/#section=data-r15&hw=ph&test=db[TechEmpower Benchmark Round 15] _Single query_ benchmark.
+* [FOLIO-2840: Unsigned long HexSequence for name of PgPreparedStatement](https://github.com/folio-org/vertx-sql-client/pull/2)
+* [RMB-739: connectionReleaseDelay PoolOption](https://github.com/folio-org/vertx-sql-client/pull/1)
 
-Supported databases
-
-** link:vertx-pg-client/README.adoc[Reactive PostgreSQL Client]
-** link:vertx-mysql-client[Reactive MySQL Client]
-** link:vertx-mssql-client[Reactive MSSQL Client]
-** link:vertx-db2-client[Reactive DB2 Client]
-
-This project is the natural evolution of the original Reactive PostgreSQL Client and will be part of Vert.x 3.8 stack release.
-
-The original project is located https://github.com/vietj/reactive-pg-client/[here] for Vert.x 3.x
-it will only handle bug fixes.
-
-== Snapshots
-
-Snapshots are deployed in Sonatype OSS repository: https://oss.sonatype.org/content/repositories/snapshots/io/vertx/vertx-sql-client/
-
-== License
-
-Apache License - Version 2.0
